Fixed login and passwd reset templates

--- a/0.11/acct_mgr/templates/reset_password.html
+++ b/0.11/acct_mgr/templates/reset_password.html
@@ -42,14 +42,12 @@
 
       <form method="post" id="acctmgr_passwd_reset" action="">
         <div>
-          <label>Username:
-            <input type="text" name="username" class="textwidget" size="20" />
-          </label>
+          <label>Username:</label>
+          <input type="text" name="username" class="textwidget" size="20" />
         </div>
         <div>
-          <label>Email Address:
-            <input type="text" name="email" class="textwidget" size="20" />
-          </label>
+          <label>Email Address:</label>
+          <input type="text" name="email" class="textwidget" size="20" />
         </div>
         <input type="submit" value="Reset password" />
       </form>
